<resources>
    <string name="app_name">AllergySavvy</string>
    <string name="SignIn">Sign In</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_pass">Enter Your Password</string>
    <string name="welcome">Welcome to AllergySavvy</string>
    <string name="invalid_email">Email Invalid</string>
    <string name="input_name">Enter Your Name</string>
    <string name="error_name">Please Input Your Name Under 35 Character</string>
    <string name="input_password">Enter Your Password</string>
    <string name="error_password">Password Must 8 Character</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="already_have_account">"Already Have Account ? "</string>
    <string name="txt_password">Password :</string>
    <string name="txt_email">Email :</string>
    <string name="txt_name">Name :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_first_page">Welcome to AllergySavvy!</string>
    <string name="txt_first_page_desc">Welcome to AllergySavvy, your smart assistant for allergy-aware cooking! Enjoy personalized recipe recommendations, ingredient tracking to avoid allergens, and easy-to-follow cooking tips. We\'re here to make your cooking safe and enjoyable.</string>
    <string name="txt_sec_page">Personalize Your Experience</string>
    <string name="txt_sec_page_desc">Set up your profile by entering your specific allergies (e.g., nuts, dairy, gluten). Receive tailored recipes that meet your needs, ensuring every meal is safe and delicious.</string>
    <string name="txt_third_page_desc">Explore a variety of recipes filtered to avoid your allergens. Follow step-by-step instructions and get tips for substituting common allergens.Enjoy a worry-free cooking experience with AllergySavvy!</string>
    <string name="txt_third_page">Discover Allergy-Safe Recipes</string>
    <string name="skip">SKIP</string>
    <string name="txt_next">NEXT</string>
    <string name="txt_welcome"><![CDATA[AllergySavvy\nSmart Solutions for Allergy-Aware Cooking]]></string>
    <string name="txt_welcome_desc">AllergySavvy helps you create delicious, allergy-safe meals with personalized recipes, allergen tracking, and easy cooking tips. Enjoy safe meals tailored to your allergy needs.</string>
    <string name="select_category">Select Your Category</string>
    <string name="hello">"Hello, "</string>
    <string name="username">Username</string>
    <string name="choose_category">Please choose your category</string>
    <string name="nonallergy">Non-Allergy</string>
    <string name="allergy">Allergy</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorites</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="welcome_text">Welcome,</string>
    <string name="search">Search</string>
    <string name="text_banner">Healthy Food For Your Life</string>
    <string name="pop_ingred">Popular Ingredients</string>
    <string name="see_all">See All</string>
    <string name="pop_recipe">Popular Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, deleniti enim exercitationem fugit iure perferendis? Adipisci assumenda excepturi facilis quae quod tempora voluptatum? Consequuntur ducimus, fugit? Alias architecto quasi voluptatum.</string>
    <string name="main_ingredient">Main Ingredient</string>
    <string name="ingred_text">What is in your kitchen ?</string>
    <string name="recipes_text">What do you want to cook today?</string>
    <string name="fav_text">Find your favorite recipes</string>
    <string name="profile_txt">My Profile</string>
    <string name="desc">Profile desc</string>
    <string name="txt_setting">Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="video_title">Tittle Video</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="ingredients_name">Ingredients</string>
    <string name="fill_ingredient">Enter your allergy food ingredients</string>
    <string name="input_ingredient">Fill The Form</string>
    <string name="enter_ingredient">Enter The Ingredients</string>
</resources>