<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_filled_24" />
    <item
        android:id="@+id/discoverFragment"
        android:title="@string/discover"
        android:icon="@drawable/baseline_movie_creation_24"/>
    <item
        android:id="@+id/exploreFragment"
        android:title="@string/explore"
        android:icon="@drawable/baseline_article_24" />
    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/baseline_favorite_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24" />
</menu>