<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logimg"
        android:layout_width="250dp"
        android:layout_height="224dp"
        android:src="@drawable/logreg_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />


    <TextView
        android:id="@+id/tv_name"
        android:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logimg" />

    <com.example.allergysavvy.customview.NameCustomView
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/bg_textbox"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="12dp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_email"
        android:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <com.example.allergysavvy.customview.EmailCustomView
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/enter_email"
        android:background="@drawable/bg_textbox"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="12dp"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"/>

    <TextView
        android:id="@+id/tv_password"
        android:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <com.example.allergysavvy.customview.PasswordCustomView
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/bg_textbox"
        android:drawableStart="@drawable/baseline_vpn_key_24"
        android:drawablePadding="12dp"
        android:inputType="textPassword"
        android:hint="@string/enter_pass"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"/>




    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_rounded"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_tosignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

    <TextView
        android:id="@+id/tv_tosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:text="@string/already_have_account"
        app:layout_constraintEnd_toStartOf="@+id/tv_txtsignup"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <TextView
        android:id="@+id/tv_txtsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="110dp"
        android:text="@string/SignIn"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_tosignup"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />




</androidx.constraintlayout.widget.ConstraintLayout>