<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/allergy_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.allergyform.AllergyFormActivity">

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="327dp"
        android:layout_height="118dp"
        android:layout_marginStart="36dp"
        android:text="@string/input_ingredient"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/choose_txt"
        android:layout_width="319dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:text="@string/fill_ingredient"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input" />


<EditText
    android:id="@+id/edt_ingredient"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginStart="36dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="36dp"
    android:hint="@string/enter_email"
    android:background="@drawable/bg_textbox"
    android:padding="20dp"
    app:layout_constraintTop_toBottomOf="@+id/choose_txt"/>


    <Button
        android:id="@+id/btn_third_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_rounded"
        android:text="@string/txt_next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_ingredient" />

</androidx.constraintlayout.widget.ConstraintLayout>